[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yml = { version = "0.0.12" }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
